--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </section>
-    <section class="container">
+    <section class="services-block container">
       <div class="zigzag-wrapper">
         <img  class= "zigzag" src="/img/blk-zigzag.svg" alt="">
       </div>
@@ -68,27 +68,91 @@
       <ul class="services-list">
         <li class="services-item">
           <img class="services-item-img" src="/img/Frame-1.svg" alt="">
-          <h3 class="services-item-heading heading-3">1:1 Coaching</h3>
+          <h3 class="services-item-heading heading-4">1:1 Coaching</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
         </li>
         <li class="services-item">
           <img class="services-item-img" src="/img/Frame-2.svg" alt="">
-          <h3 class="services-item-heading heading-3">Consultation</h3>
+          <h3 class="services-item-heading heading-4">Consultation</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
         </li>
         <li class="services-item">
           <img class="services-item-img" src="/img/Frame-3.svg" alt="">
-          <h3 class="services-item-heading heading-3">Group Coaching Sessions</h3>
+          <h3 class="services-item-heading heading-4">Group Coaching Sessions</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
         </li>
       </ul>
     </section>
+    <section class="feedbacks-block background-color">
+      <div class="container">
+        <h2 class="heading-2 feedbacks-heading">Hear out what my clients say about me.</h2>
+        <ul class="feedbacks-list">
+          <li class="feedbacks-item">
+            <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
+            <h3 class="heading-4">Jane</h3>
+            <img width="70px" height="70px" src="/img/profile-1.png" alt="">
+            <div class="simple-rating">
+              <div class="simple-rating__items">
+                <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating" checked>
+                <label for="simple-rating__5" class="simple-rating__label"></label>
+                <input id="simple-rating__4" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__4" class="simple-rating__label"></label>
+                <input id="simple-rating__3" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__3" class="simple-rating__label"></label>
+                <input id="simple-rating__2" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__2" class="simple-rating__label"></label>
+                <input id="simple-rating__1" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__1" class="simple-rating__label"></label>
+              </div>
+            </div>
+          </li>
+          <li class="feedbacks-item">
+            <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
+            <h3 class="heading-4">Catherine</h3>
+            <img width="70px" height="70px" src="/img/profile-2.png" alt="">
+            <div class="simple-rating">
+              <div class="simple-rating__items">
+                <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__5" class="simple-rating__label"></label>
+                <input id="simple-rating__4" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__4" class="simple-rating__label"></label>
+                <input id="simple-rating__3" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__3" class="simple-rating__label"></label>
+                <input id="simple-rating__2" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__2" class="simple-rating__label"></label>
+                <input id="simple-rating__1" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__1" class="simple-rating__label"></label>
+              </div>
+            </div>
+          </li>
+          <li class="feedbacks-item">
+            <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
+            <h3 class="heading-4">Jane</h3>
+            <img width="70px" height="70px" src="/img/profile-3.png" alt="">
+            <div class="simple-rating">
+              <div class="simple-rating__items">
+                <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__5" class="simple-rating__label"></label>
+                <input id="simple-rating__4" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__4" class="simple-rating__label"></label>
+                <input id="simple-rating__3" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__3" class="simple-rating__label"></label>
+                <input id="simple-rating__2" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__2" class="simple-rating__label"></label>
+                <input id="simple-rating__1" type="radio" value="5" class="simple-rating__item" name="simple-rating">
+                <label for="simple-rating__1" class="simple-rating__label"></label>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="app-footer">
-
+    
   </footer>
 </body>
 </html>
