created articles block

--- a/index.html
+++ b/index.html
@@ -150,6 +150,36 @@
         </ul>
       </div>
     </section>
+    <section class="article-block">
+      <div class="container">
+        <h2 class="heading-2 article-head">Stay Motivated, read the weekly blog articles.</h2>
+        <ul class="article-list">
+          <li class="article-item">
+            <img src="/img/article-1.png" alt="">
+            <div class="article-text-wrapper">
+              <h4 class="heading-4 article-heading">Balancing your love and work life.</h4>
+              <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
+            </div>
+          </li>
+          <li class="article-item">
+            <img src="/img/article-2.png" alt="">
+            <div class="article-text-wrapper">
+              <h4 class="heading-4 article-heading">A short break from Social Media is important.</h4>
+              <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
+            </div>
+          </li>
+          <li class="article-item">
+            <img src="/img/article-3.png" alt="">
+            <div class="article-text-wrapper">
+              <h4 class="heading-4 article-heading">How to be 1% Better Every Day</h4>
+              <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
+            </div>
+          </li>
+        </ul>
+        <button class="main-button article-button">Read more blogs</button>
+      </div>
+      
+    </section>
   </main>
   <footer class="app-footer">
     
