created online block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="app-header">
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="row app-header-container">
         <div class="logo-container">
           <img src="/img/Logo.svg" alt="logo" class="app-logo">
@@ -30,7 +30,7 @@
           </ul>
         </nav>
       </div>
-    </div>
+    <!-- </div> -->
   </header>
   <main>
     <section class="hero background-color">
@@ -178,7 +178,27 @@
         </ul>
         <button class="main-button article-button">Read more blogs</button>
       </div>
-      
+    </section>
+    <section class="product-block container">
+        <div class="product-info">
+          <h2 class="heading-2 product-heading">Don’t miss out on my ‘Live life at the full potential’ free guide</h2>
+          <p class="main-text product-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam. <br><br> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+          <button class="main-button">Get your free guide now</button>
+        </div>
+        <div class="product-banner">
+          <img src="/img/banner.png" alt="">
+          <img class="green-z"src="/img/green-circle.png" alt="">
+          <div class="green-z-wrapper heading-4">Get Free</div>
+          </div>
+        </div>
+    </section>
+    <section class="online-block container">
+      <div class="online-block-info">
+        <h2 class="online-block-heading">Get 15-Minutes Complimentary online session.</h2>
+        <p class="main-text online-block-text">Limited Period Offer. Claim Now.</p>
+        <button class="main-button online-block-button">Book now</button>
+      </div>
+      <img class="online-block-pic" src="/img/online.png" alt="">
     </section>
   </main>
   <footer class="app-footer">
