--- a/index.html
+++ b/index.html
@@ -202,7 +202,51 @@
     </section>
   </main>
   <footer class="app-footer">
-    
+    <div class="wrapper background-color">
+      <section class="footer-top container">
+        <div class="footer-top-info">
+          <h4 class="heading-4 footer-top-info-text">Get notified when I publish new articles</h4>
+          <p class="main-text">Stay up to date with the latest news, announcements, and articles.</p>
+        </div>
+        <div class="footer-top-form">
+          <input type="email" placeholder="Enter your email" class="footer-top-input">
+          <button class="main-button footer-top-button" >Subscribe</button>
+        </div>
+      </section>
+    </div>  
+    <section class="footer-mid container">
+      <div class="footer-mid-logo-block">
+        <img src="/img/Logo.svg" alt="">
+        <p class="main-text footer-mid-logo-text">Design amazing digital experiences that create more happy in the world.</p>
+      </div>
+      <div class="footer-mid-pages-block">
+        <h4 class="heading-4">pages</h4>
+        <ul class="footer-mid-contacts-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">About us</a></li>
+          <li><a href="">Extra Sales/Landingpage</a></li>
+          <li><a href="">Free guide</a></li>
+        </ul>
+      </div>
+      <div class="footer-mid-contacts-block">
+        <h4 class="heading-4">contacts</h4>
+        <ul class="footer-mid-contacts-list">
+          <li><a href="">+123 456 789</a></li>
+          <li><a href="">hello@happydigital.nl</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Linkedin</a></li>
+        </ul>
+      </div>
+    </section>
+    <section class="footer-bottom container">
+      <a href="https://www.happydigital.nl/"><img src="/img/Made by.svg" alt=""></a>
+      <ul class="socials">
+        <li><img src="/img/Linkedin.svg" alt=""></li>
+        <li><img src="/img/facebook.svg" alt=""></li>
+        <li><img src="/img/internet.svg" alt=""></li>
+      </ul>
+    </section>
   </footer>
 </body>
 </html>
