--- a/index.html
+++ b/index.html
@@ -10,33 +10,31 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Happy Coaching</title>
 </head>
 <body>
   <header class="app-header">
-    <!-- <div class="container"> -->
       <div class="row app-header-container">
         <div class="logo-container">
-          <img src="/img/Logo.svg" alt="logo" class="app-logo">
+          <img src="img/Logo.svg" alt="logo" class="app-logo">
         </div>
         <nav class="header-nav">
           <ul class="header-menu main-text">
-            <li><a>Home</a></li>
-            <li><a>Services</a></li>
-            <li>About us</li>
-            <li>Extra Salespage</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Extra Salespage</a></li>
             <li><button class="main-button"><span>Get your free guide now</span></button></li>
           </ul>
         </nav>
       </div>
-    <!-- </div> -->
   </header>
   <main>
     <section class="hero background-color">
       <div class="container">
         <div class="vector-wrapper">
-          <img  class= "vector" src="/img/Vector.svg" alt="">
+          <img  class= "vector" src="img/Vector.svg" alt="">
         </div>
         <div class="hero-wrapper">
           <div class="hero-info">
@@ -49,15 +47,15 @@
             <button class="main-button hero-button"><span>Get your free guide now</span></button>
           </div>
           <div class="hero-photo">
-            <img class="hero-logo" src="/img/photo_2023-06-13_14-34-23.jpg" alt="">
-            <img class="hero-pic" src="/img/pexels-andrea-piacquadio-3978564 1.png" alt="">
+            <img class="hero-logo" src="img/photo_2023-06-13_14-34-23.jpg" alt="">
+            <img class="hero-pic" src="img/pexels-andrea-piacquadio-3978564 1.png" alt="">
           </div>
         </div>
       </div>
     </section>
     <section class="services-block container">
       <div class="zigzag-wrapper">
-        <img  class= "zigzag" src="/img/blk-zigzag.svg" alt="">
+        <img  class= "zigzag" src="img/blk-zigzag.svg" alt="">
       </div>
       <div class="info-wrapper">
         <h2 class="heading-2 info-block">I can help you in these particular areas.</h2>
@@ -67,19 +65,19 @@
       </div>
       <ul class="services-list">
         <li class="services-item">
-          <img class="services-item-img" src="/img/Frame-1.svg" alt="">
+          <img class="services-item-img" src="img/Frame-1.svg" alt="">
           <h3 class="services-item-heading heading-4">1:1 Coaching</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
         </li>
         <li class="services-item">
-          <img class="services-item-img" src="/img/Frame-2.svg" alt="">
+          <img class="services-item-img" src="img/Frame-2.svg" alt="">
           <h3 class="services-item-heading heading-4">Consultation</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
         </li>
         <li class="services-item">
-          <img class="services-item-img" src="/img/Frame-3.svg" alt="">
+          <img class="services-item-img" src="img/Frame-3.svg" alt="">
           <h3 class="services-item-heading heading-4">Group Coaching Sessions</h3>
           <p class="services-item-text main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.
           </p>
@@ -93,7 +91,7 @@
           <li class="feedbacks-item">
             <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
             <h3 class="heading-4">Jane</h3>
-            <img width="70px" height="70px" src="/img/profile-1.png" alt="">
+            <img width="70px" height="70px" src="img/profile-1.png" alt="">
             <div class="simple-rating">
               <div class="simple-rating__items">
                 <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating" checked>
@@ -112,7 +110,7 @@
           <li class="feedbacks-item">
             <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
             <h3 class="heading-4">Catherine</h3>
-            <img width="70px" height="70px" src="/img/profile-2.png" alt="">
+            <img width="70px" height="70px" src="img/profile-2.png" alt="">
             <div class="simple-rating">
               <div class="simple-rating__items">
                 <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating">
@@ -131,7 +129,7 @@
           <li class="feedbacks-item">
             <p>"I gained so much <i>confidience</i> in my ability to connect and deepen my relationships with people. "</p>
             <h3 class="heading-4">Jane</h3>
-            <img width="70px" height="70px" src="/img/profile-3.png" alt="">
+            <img width="70px" height="70px" src="img/profile-3.png" alt="">
             <div class="simple-rating">
               <div class="simple-rating__items">
                 <input id="simple-rating__5" type="radio" value="5" class="simple-rating__item" name="simple-rating">
@@ -155,21 +153,21 @@
         <h2 class="heading-2 article-head">Stay Motivated, read the weekly blog articles.</h2>
         <ul class="article-list">
           <li class="article-item">
-            <img src="/img/article-1.png" alt="">
+            <img src="img/article-1.png" alt="">
             <div class="article-text-wrapper">
               <h4 class="heading-4 article-heading">Balancing your love and work life.</h4>
               <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
             </div>
           </li>
           <li class="article-item">
-            <img src="/img/article-2.png" alt="">
+            <img src="img/article-2.png" alt="">
             <div class="article-text-wrapper">
               <h4 class="heading-4 article-heading">A short break from Social Media is important.</h4>
               <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
             </div>
           </li>
           <li class="article-item">
-            <img src="/img/article-3.png" alt="">
+            <img src="img/article-3.png" alt="">
             <div class="article-text-wrapper">
               <h4 class="heading-4 article-heading">How to be 1% Better Every Day</h4>
               <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim veniam.</p>
@@ -186,8 +184,8 @@
           <button class="main-button">Get your free guide now</button>
         </div>
         <div class="product-banner">
-          <img src="/img/banner.png" alt="">
-          <img class="green-z"src="/img/green-circle.png" alt="">
+          <img src="img/banner.png" alt="">
+          <img class="green-z"src="img/green-circle.png" alt="">
           <div class="green-z-wrapper heading-4">Get Free</div>
           </div>
         </div>
@@ -198,7 +196,7 @@
         <p class="main-text online-block-text">Limited Period Offer. Claim Now.</p>
         <button class="main-button online-block-button">Book now</button>
       </div>
-      <img class="online-block-pic" src="/img/online.png" alt="">
+      <img class="online-block-pic" src="img/online.png" alt="">
     </section>
   </main>
   <footer class="app-footer">
@@ -216,7 +214,7 @@
     </div>  
     <section class="footer-mid container">
       <div class="footer-mid-logo-block">
-        <img src="/img/Logo.svg" alt="">
+        <img src="img/Logo.svg" alt="">
         <p class="main-text footer-mid-logo-text">Design amazing digital experiences that create more happy in the world.</p>
       </div>
       <div class="footer-mid-pages-block">
@@ -240,11 +238,11 @@
       </div>
     </section>
     <section class="footer-bottom container">
-      <a href="https://www.happydigital.nl/"><img src="/img/Made by.svg" alt=""></a>
+      <a href="https://www.happydigital.nl/"><img src="img/Made by.svg" alt=""></a>
       <ul class="socials">
-        <li><img src="/img/Linkedin.svg" alt=""></li>
-        <li><img src="/img/facebook.svg" alt=""></li>
-        <li><img src="/img/internet.svg" alt=""></li>
+        <li><img src="img/Linkedin.svg" alt=""></li>
+        <li><img src="img/facebook.svg" alt=""></li>
+        <li><img src="img/internet.svg" alt=""></li>
       </ul>
     </section>
   </footer>
